objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company1</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Employes</relationshipLabel>
        <relationshipName>Employes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company2</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Employes (Company2)</relationshipLabel>
        <relationshipName>Employes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Employee</label>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>